# FFPush

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xcp/ffpush/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  ffpush.cpp  safe_queue.h  util.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/xcp/ffpush/: AudioChannel.java  CameraHelper.java  FFPusher.java  MainActivity.java  VideoChannel.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/xcp/ffpush/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
